docs/api/qiskit-ibm-runtime/0.46/ibm-quantum-schemas-noise-learner-v3-version-0-2-options-model.mdx
---
title: OptionsModel (v0.46)
description: API reference for ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel in qiskit-ibm-runtime v0.46
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel
---

<span id="ibm-quantum-schemas-noise-learner-v3-version-0-2-optionsmodel" />

# OptionsModel

<Class id="ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel" isDedicatedPage={true} github="https://github.com/Qiskit/ibm-quantum-schemas/tree/0.5.20260320/ibm_quantum_schemas/noise_learner_v3/version_0_2/models.py#L59-L84" signature="OptionsModel" modifiers="pydantic model">
  Bases: `BaseModel`

  Runtime options with all fields set.

  ### init\_qubits

  <Attribute id="ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel.init_qubits" attributeTypeHint="bool" attributeValue="True" modifiers="field">
    Whether to reset the qubits to the ground state for each shot.
  </Attribute>

  ### layer\_pair\_depths

  <Attribute id="ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel.layer_pair_depths" attributeTypeHint="list[int]" attributeValue="[0, 1, 2, 4, 16, 32]" modifiers="field">
    The circuit depths (measured in number of pairs) to use in Pauli Lindblad experiments.
  </Attribute>

  ### num\_randomizations

  <Attribute id="ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel.num_randomizations" attributeTypeHint="int" attributeValue="32" modifiers="field">
    The number of random circuits to use per learning circuit configuration.
  </Attribute>

  ### post\_selection

  <Attribute id="ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel.post_selection" attributeTypeHint="PostSelectionOptionsModel [Optional]" modifiers="field">
    Options for post selecting the results of noise learning circuits.
  </Attribute>

  ### rep\_delay

  <Attribute id="ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel.rep_delay" attributeTypeHint="float | None" attributeValue="None" modifiers="field">
    The repetition delay.

    This is the delay between the end of one circuit and the start of the next within a shot loop. This is only supported on backends that have `backend.dynamic_reprate_enabled=True`. It must be from the range supplied by `backend.rep_delay_range`. When this value is `None`, the default value `backend.default_rep_delay` is used.
  </Attribute>

  ### shots\_per\_randomization

  <Attribute id="ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel.shots_per_randomization" attributeTypeHint="int" attributeValue="128" modifiers="field">
    The total number of shots to use per randomized learning circuit.
  </Attribute>
</Class>

