docs/api/qiskit-ibm-runtime/0.49/ibm-quantum-schemas-noise-learner-v3-version-0-2-options-model.mdx
---
title: OptionsModel (v0.49)
description: API reference for ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel in qiskit-ibm-runtime v0.49
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel
---

<span id="ibm-quantum-schemas-noise-learner-v3-version-0-2-optionsmodel" />

# OptionsModel

<Class id="ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel" isDedicatedPage={true} github="https://github.com/Qiskit/ibm-quantum-schemas/tree/0.10.20260723/ibm_quantum_schemas/noise_learner_v3/version_0_2/models.py#L59-L84" signature="OptionsModel" modifiers="pydantic model">
  Bases: `BaseModel`

  Runtime options with all fields set.

  ### init\_qubits

  <Attribute id="ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel.init_qubits" modifiers="field">
    Type: `bool`

    Default value: `True`

    Whether to reset the qubits to the ground state for each shot.
  </Attribute>

  ### layer\_pair\_depths

  <Attribute id="ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel.layer_pair_depths" modifiers="field">
    Type: `list`\[`int`]

    Default value: `[0, 1, 2, 4, 16, 32]`

    The circuit depths (measured in number of pairs) to use in Pauli Lindblad experiments.
  </Attribute>

  ### num\_randomizations

  <Attribute id="ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel.num_randomizations" modifiers="field">
    Type: `int`

    Default value: `32`

    The number of random circuits to use per learning circuit configuration.
  </Attribute>

  ### post\_selection

  <Attribute id="ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel.post_selection" modifiers="field">
    Type: [`PostSelectionOptionsModel`](ibm-quantum-schemas-noise-learner-v3-version-0-2-post-selection-options-model "ibm_quantum_schemas.noise_learner_v3.version_0_2.PostSelectionOptionsModel")

    Options for post selecting the results of noise learning circuits.
  </Attribute>

  ### rep\_delay

  <Attribute id="ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel.rep_delay" modifiers="field">
    Type: `float` | `None`

    Default value: `None`

    The repetition delay.

    This is the delay between the end of one circuit and the start of the next within a shot loop. This is only supported on backends that have `backend.dynamic_reprate_enabled=True`. It must be from the range supplied by `backend.rep_delay_range`. When this value is `None`, the default value `backend.default_rep_delay` is used.
  </Attribute>

  ### shots\_per\_randomization

  <Attribute id="ibm_quantum_schemas.noise_learner_v3.version_0_2.OptionsModel.shots_per_randomization" modifiers="field">
    Type: `int`

    Default value: `128`

    The total number of shots to use per randomized learning circuit.
  </Attribute>
</Class>

